--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 fastapi = {extras = ["standard"], version = "~=0.116.1"}
 jinja2 = "~=3.1.6"
+whoisit = "~=3.1.1"
 
 [dev-packages]
 flake8 = "~=7.3.0"
